added text on courses

--- a/cv/html/courses.html
+++ b/cv/html/courses.html
@@ -14,5 +14,23 @@
                 <div class="animation start-home"></div>
             </nav>
         </div>
+        <div class="text">
+            <h1 class="courses">Kurser</h1>
+            <ul>
+                <li class="courses">Matematik 1c</li>
+                <li class="courses">Webbutveckling 1</li>
+                <li class="courses">Engelska 5</li>
+                <li class="courses">Svenska 1</li>
+                <li class="courses">Samhällskunskap 1b</li>
+                <li class="courses">Historia 1a1</li>
+                <li class="courses">Idrott och hälsa 1</li>
+            </ul>
+            <h2 class="courses">Mina favorit kurser i ordning</h2>
+            <ol class="courses">
+                <li>Computer science is my absolute favorit course because it fullfills my thirst for programing witch i have been extreamly deprived of in primary school.
+                     Men om jag ska var ärlig vet jag inte varför jag gillar webbutveckling så mycket, det är bara något specielt att skriva program som kan göra så avanserade saker.</li>
+                <li>Matematik är min andra favorit kurs for att jag älskar hur matematikens olika samband visar sig så ofta och klart i universum.</li>
+            </ol>
+        </div>
     </body>
 </html>
