--- a/cv/html/courses.html
+++ b/cv/html/courses.html
@@ -25,12 +25,12 @@
                 <li class="courses">Historia 1a1</li>
                 <li class="courses">Idrott och hälsa 1</li>
             </ul>
-            <h2 class="courses">Mina favorit kurser i ordning</h2>
-            <ol class="courses">
+            <h1 id="favoritkurser">Mina favorit kurser</h1>
+            <ul class="courses">
                 <li>Computer science is my absolute favorit course because it fullfills my thirst for programing witch i have been extreamly deprived of in primary school.
                      Men om jag ska var ärlig vet jag inte varför jag gillar webbutveckling så mycket, det är bara något specielt att skriva program som kan göra så avanserade saker.</li>
                 <li>Matematik är min andra favorit kurs for att jag älskar hur matematikens olika samband visar sig så ofta och klart i universum.</li>
-            </ol>
+            </ul>
         </div>
     </body>
 </html>
