--- a/cv/cv/html/courses.html
+++ b/cv/cv/html/courses.html
@@ -27,8 +27,8 @@
             </ul>
             <h1 id="favoritkurser">Mina favorit kurser</h1>
             <ul class="courses">
-                <li>Computer science is my absolute favorit course because it fullfills my thirst for programing witch i have been extreamly deprived of in primary school.
-                     Men om jag ska var ärlig vet jag inte varför jag gillar webbutveckling så mycket, det är bara något specielt att skriva program som kan göra så avanserade saker.</li>
+                <li>Webbutveckling är min absoluta favoritkurs eftersom den fyller min törst för programmering som jag har blivit berövad av i grundskolan.
+                    Men om jag ska var ärlig vet jag inte varför jag gillar webbutveckling så mycket, det är bara något specielt att skriva program som kan göra så avanserade saker.</li>
                 <li>Matematik är min andra favorit kurs for att jag älskar hur matematikens olika samband visar sig så ofta och klart i universum.</li>
             </ul>
         </div>
