--- a/cv/cv/html/index.html
+++ b/cv/cv/html/index.html
@@ -6,14 +6,13 @@
     <body>
         <div>
             <nav>
-                <a href="./index.html">Home</a>
-                <a href="./me.html">Me</a>
-                <a href="./courses.html">Courses</a>
-                <a href="./intrests.html">Intrests</a>
+                <a href="./index.html">        Hem          </a>
+                <a href="./me.html">           Me           </a>
+                <a href="./courses.html">      Courses      </a>
+                <a href="./intrests.html">     Intrests     </a>
                 <a href="./documentation.html">Documentation</a>
                 <div class="animation start-home"></div>
             </nav>
         </div>
-        
     </body>
 </html>
